--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,6 +23,7 @@
         </div>
         <h1>Mon site Astro</h1>
         <h1>À propos de moi</h1>
+        test
         <h2>... et de mon nouveau site Astro !</h2>
 
         <p>Je suis en train de suivre le tutoriel d'introduction d'Astro. C'est la deuxième page de mon site web, et c'est la première que j'ai construite moi-même !</p>
