--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,33 +1,33 @@
 ---
+import Naviguation from '../components/Naviguation.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
+import '../styles/global.css';
+
+const pageTitle = "À propos de moi";
+
+const identity = {
+  firstName: "Angelo",
+  country: "Canada",
+  occupation: "Rédactrice technique",
+  hobbies: ["photographie", "observation des oiseaux", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Rédaction de documentation"];
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-        <style>
-            .box-spacing > * {
-                padding-inline: 12px;
-            }
-        </style>
-	</head>
-	<body>
-        <div class="box-spacing">
-            <a href="/">Accueil</a>
-            <a href="/about">À propos de vous</a>
-            <a href="/blog">Mon blog</a>
-        </div>
-        <h1>Mon site Astro</h1>
-        <h1>À propos de moi</h1>
-        test
-        <h2>... et de mon nouveau site Astro !</h2>
+<BaseLayout pageTitle={pageTitle}>
+    <p>Voici quelques faits me concernant :</p>
+    <ul>
+        <li>Je m'appelle {identity.firstName}.</li>
+        <li>Je vis au {identity.country} et je travaille en tant que {identity.occupation}.</li>
+        {identity.hobbies.length >= 2 &&
+            <li>Deux de mes loisirs sont : {identity.hobbies[0]} et {identity.hobbies[1]}</li>
+        }
+    </ul>
 
-        <p>Je suis en train de suivre le tutoriel d'introduction d'Astro. C'est la deuxième page de mon site web, et c'est la première que j'ai construite moi-même !</p>
-
-        <p>Ce site se mettra à jour au fur et à mesure que je compléterai davantage le tutoriel, alors revenez régulièrement voir comment se déroule mon parcours !</p>
-    </body>
-</html>
+    <p>Voici mes compétences :</p>
+    <ul>
+        {skills.map((skill) => <li>{skill}</li>)}
+    </ul>
+</BaseLayout>
