--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,7 @@
 ---
-
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "Page d'accueil";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Mon site astro</h1>
-		<a href="/about">click</a>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>Mon sous-titre de blog génial</h2>
+</BaseLayout>
