--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,9 @@
 ---
+import BlogPost from "../components/BlogPost.astro";
 import Footer from "../components/Footer.astro"
 import Naviguation from "../components/Naviguation.astro"
 import BaseLayout from "../layouts/BaseLayout.astro";
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 
 
 const pageTitle = "blog";
@@ -9,4 +11,7 @@ const pageTitle = "blog";
 ---
 <BaseLayout pageTitle={pageTitle}>
     <h1>mon blog</h1>
+    <ul>
+        {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+    </ul>
 </BaseLayout>
